<resources>
    <string name="app_name">Stunden-Manager</string>
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="login">login</string>
    <string name="birthday">birthday\n</string>
    <string name="street">street</string>
    <string name="zip_code">zipcode</string>
    <string name="city">city</string>
    <string name="registration">registration</string>
    <string name="or_login">or login</string>
    <string name="surname">surname</string>
    <string name="name">name</string>
    <string name="or_registration">or registration</string>
    <string name="add_new_session">Add new session</string>
    <string name="sign_out">sign-out</string>
    <string name="delete">Delete</string>
    <string name="break_end">Break-End</string>
    <string name="break_start">Break-Start</string>
    <string name="add_break">Add break</string>
    <string name="add_end_time">Add End Time</string>
    <string name="end_time_not_set">End Time: Not set</string>
    <string name="start_time_not_set">Start Time: Not set</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="hello_dashboard">Hallo, </string>
    <string name="sessions">Sessions</string>
    <string name="details">Details</string>
    <string name="breaks">Pausen</string>
    <string name="to_admin">to admin</string>
    <string name="to_user">to user</string>
    <string name="admin">Admin</string>
    <string name="dashboard">Dashboard</string>
    <string name="statistics">Statistiken</string>
    <string name="home">Home</string>
    <string name="shiftPlanning">Schichtplanung</string>
    <string name="workerPlanning">Mitarbeiter-Verwaltung</string>
    <string name="shiftPlaner">Schichtplaner</string>
    <string name="week">Week</string>
    <string name="spacer">...</string>
    <string name="morningShift">Frühschicht</string>
    <string name="pick">Auswählen</string>
    <string name="lateShift">Spätschicht</string>
    <string name="nightShift">Nachtschicht</string>
    <string name="create">Erstellen</string>
    <string name="pick_worker">Auswählen der Mitarbeiter</string>
    <string name="picked">Ausgewählt</string>
    <string name="placeholder">...</string>
    <string name="workingTimes">Zeiteintragung</string>
    <string name="ownShifts">Zugeteilte Schichten</string>
    <string name="vacationOrIllness">Urlaub/Krankheit</string>
    <string name="vacationIllnessTitle">Krankheit / Urlaub</string>
    <string name="vacation">Urlaub</string>
    <string name="illness">Krankheit</string>
    <string name="minus">-</string>
    <string name="type">type</string>
    <string name="startDate">Start date</string>
    <string name="endDate">End date</string>
    <string name="status">Status</string>
    <string name="administration">Administration</string>
    <string name="userDetails">User Details</string>
    <string name="back">Back</string>
    <string name="approval">Approval</string>
    <string name="checked_vacation_or_illness">Gecheckte Urlaub-/Krankheitstage</string>
    <string name="createReport">Create report</string>
</resources>