<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/viType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type"
        android:textSize="16sp"
        android:textStyle="bold" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/viStartDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startDate"
        android:textSize="14sp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/viEndDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/endDate"
        android:textSize="14sp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvApproval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status"/>

</LinearLayout>