<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.textview.MaterialTextView
        style="@style/TextAppearance.AppCompat.Display2"
        android:id="@+id/tvHelloDash"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/gl_start"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/hello_dashboard"
        />

    <com.google.android.material.textview.MaterialTextView
        style="@style/TextAppearance.AppCompat.Display1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/titleUserNameDash"
        app:layout_constraintStart_toEndOf="@id/tvHelloDash"
        app:layout_constraintBottom_toBottomOf="@id/tvHelloDash"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="4dp"
        android:text="@string/name"
        />

    <Button
        android:id="@+id/btnToShifts"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:text="@string/ownShifts"
        app:layout_constraintTop_toBottomOf="@id/tvHelloDash"
        app:layout_constraintBottom_toTopOf="@id/btnVacationIllness"
        app:layout_constraintEnd_toStartOf="@+id/gl_end"
        app:layout_constraintStart_toEndOf="@+id/gl_start" />

    <Button
        android:id="@+id/btnVacationIllness"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:text="@string/vacationOrIllness"
        app:layout_constraintEnd_toStartOf="@+id/gl_end"
        app:layout_constraintStart_toEndOf="@+id/gl_start"
        app:layout_constraintTop_toBottomOf="@+id/btnToShifts"
        app:layout_constraintBottom_toTopOf="@id/btnToWorkingTimes"
        />

    <Button
        android:id="@+id/btnToWorkingTimes"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:text="@string/workingTimes"
        app:layout_constraintEnd_toStartOf="@+id/gl_end"
        app:layout_constraintStart_toEndOf="@+id/gl_start"
        app:layout_constraintTop_toBottomOf="@+id/btnVacationIllness"
        app:layout_constraintBottom_toTopOf="@id/fabSignOut"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabSignOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/sign_out"
        android:src="@drawable/ic_sign_out"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/gl_start"
        android:layout_marginBottom="16dp"
        app:backgroundTint="@color/cardview_light_background"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/gl_start"
        app:layout_constraintGuide_begin="16dp"
        android:orientation="vertical" />

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/gl_end"
        app:layout_constraintGuide_end="16dp"
        android:orientation="vertical"/>
</androidx.constraintlayout.widget.ConstraintLayout>