<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.textview.MaterialTextView
        style="@style/TextAppearance.AppCompat.Display1"
        android:id="@+id/tvHello"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/gl_start"
        app:layout_constraintEnd_toEndOf="@id/gl_end"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/userDetails"
        />

    <com.google.android.material.textview.MaterialTextView
        style="@style/TextAppearance.Material3.TitleMedium"
        android:id="@+id/tvTitleSurname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/gl_start"
        app:layout_constraintEnd_toEndOf="@id/gl_mid"
        app:layout_constraintTop_toBottomOf="@id/tvHello"
        android:text="@string/surname"
        android:layout_marginTop="16dp"/>

    <com.google.android.material.textview.MaterialTextView
        style="@style/TextAppearance.Material3.BodyMedium"
        android:id="@+id/tvSurname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/gl_mid"
        app:layout_constraintEnd_toEndOf="@id/gl_end"
        app:layout_constraintTop_toTopOf="@id/tvTitleSurname"
        app:layout_constraintBottom_toBottomOf="@id/tvTitleSurname"
        android:text="@string/placeholder"/>

    <com.google.android.material.textview.MaterialTextView
        style="@style/TextAppearance.Material3.TitleMedium"
        android:id="@+id/tvTitleName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/gl_start"
        app:layout_constraintEnd_toEndOf="@id/gl_mid"
        app:layout_constraintTop_toBottomOf="@id/tvTitleSurname"
        android:text="@string/name"
        android:layout_marginTop="16dp"/>

    <com.google.android.material.textview.MaterialTextView
        style="@style/TextAppearance.Material3.BodyMedium"
        android:id="@+id/tvName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/gl_mid"
        app:layout_constraintEnd_toEndOf="@id/gl_end"
        app:layout_constraintTop_toTopOf="@id/tvTitleName"
        app:layout_constraintBottom_toBottomOf="@id/tvTitleName"
        android:text="@string/placeholder"/>

    <com.google.android.material.textview.MaterialTextView
        style="@style/TextAppearance.Material3.TitleLarge"
        android:id="@+id/tvTitleApproval"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/gl_start"
        app:layout_constraintEnd_toEndOf="@id/gl_end"
        app:layout_constraintTop_toBottomOf="@id/tvTitleName"
        android:text="@string/approval"
        android:layout_marginTop="32dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvApproval"
        android:layout_width="0dp"
        android:layout_height="200dp"
        app:layout_constraintStart_toStartOf="@id/gl_start"
        app:layout_constraintEnd_toEndOf="@id/gl_end"
        app:layout_constraintTop_toBottomOf="@id/tvTitleApproval"
        tools:listitem="@layout/item_admin_user_details_approval"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_marginTop="8dp"/>

    <com.google.android.material.textview.MaterialTextView
        style="@style/TextAppearance.Material3.TitleLarge"
        android:id="@+id/tvTitleVI"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/gl_start"
        app:layout_constraintEnd_toEndOf="@id/gl_end"
        app:layout_constraintTop_toBottomOf="@id/rvApproval"
        android:text="@string/checked_vacation_or_illness"
        android:layout_marginTop="32dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvVI"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/tvTitleVI"
        app:layout_constraintStart_toStartOf="@id/gl_start"
        app:layout_constraintEnd_toEndOf="@id/gl_end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_vacation_illness"
        />

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/gl_start"
        app:layout_constraintGuide_begin="16dp"
        android:orientation="vertical" />

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/gl_end"
        app:layout_constraintGuide_end="16dp"
        android:orientation="vertical"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/gl_mid"
        app:layout_constraintGuide_percent=".5"
        android:orientation="vertical"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabBackNav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/back"
        android:src="@drawable/ic_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/gl_start"
        android:layout_marginBottom="16dp"
        app:backgroundTint="@color/cardview_light_background"/>

</androidx.constraintlayout.widget.ConstraintLayout>