<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/cardview_light_background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="8dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/approveButton">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/viType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type"
        android:textSize="16sp"
        android:textStyle="bold" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/viStartDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startDate"
        android:textSize="14sp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/viEndDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/endDate"
        android:textSize="14sp" />
    </LinearLayout>


    <com.google.android.material.button.MaterialButton
        style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
        android:id="@+id/deleteButton"
        android:layout_width="0dp"
        app:icon="@drawable/ic_close"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
        android:id="@+id/approveButton"
        android:layout_width="0dp"
        app:icon="@drawable/ic_plus"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/deleteButton"
        android:layout_marginStart="12dp"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>